syntax = "proto3";

package com.github.dinowernli.proto.grpc.prometheus;

option java_outer_classname = "HelloProto";

message HelloRequest {
  string recipient = 1;

  // If set, an error is returned (defined as anything with grpc status other
  // than OK).
  bool throw_exception = 2;
}

message HelloResponse {
  string message = 1;
}

service HelloService {
  rpc SayHello (HelloRequest) returns (HelloResponse) {}
  rpc SayHelloServerStream (HelloRequest) returns (stream HelloResponse) {}
  rpc SayHelloClientStream (stream HelloRequest) returns (HelloResponse) {}
  rpc SayHelloBidiStream (stream HelloRequest) returns (stream HelloResponse) {}
}
